--- a/src/main.css
+++ b/src/main.css
@@ -66,13 +66,57 @@ footer a:last-child{
   text-align: center;
 }
 .home-cover a{
-  font-size: 70px;
+  font-size: 40px;
   text-decoration: none;
   display: block;
   width: 50%;
-  margin: 0 auto;;
+  margin: 0 auto;
+  
 }
 .home-cover,h1,p{
   color:red;
   font-size: 30px
+}
+.blog-card{
+  position: relative;
+  width: 98%;
+
+  margin: 10px auto;
+}
+.blog-index{
+  background-color:red;
+  color:#fff;
+  text-align: center;
+  line-height: 2.4;
+  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
+}
+.blog-desc {
+  padding-left: 10px;
+  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+.blog-desc p{
+  font-size: 14px;
+  opacity: 0.8;
+}
+.blog-desc h3{
+  color:#cc0
+}
+.blog-desc a{
+  padding: 10px 15px;
+  display: block;
+  background-color: #0cc;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 10px;
+  width: 30%;
+  margin:0 auto;
+
+}
+.blog-desc span{
+  position: absolute;;
+  right:10px;
+  bottom: 5px;
+
+
 }
