--- a/src/main.css
+++ b/src/main.css
@@ -93,9 +93,11 @@ footer a:last-child{
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
   display: flex;
-  flex-direction: column;
+  /*flex-direction: column;*/
+  align-items: center;
   justify-content: center;
   text-align: center;
+  color: #fff;
 }
 .home-cover a{
   font-size: 40px;
