--- a/src/main.css
+++ b/src/main.css
@@ -16,7 +16,7 @@ html,body,#root{
   flex-direction: column;
   height: 100%;
 }
-@media(min-width:500px){
+@media(min-width:750px){
   .root{
     flex-direction:row;
 
@@ -98,6 +98,7 @@ footer a:last-child{
   justify-content: center;
   text-align: center;
   color: #fff;
+  flex-grow: 1;
 }
 .home-cover a{
   font-size: 40px;
